# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("../../os_account.gni")
account_service_sources = [
  "${services_path}/accountmgr/src/account_event_provider.cpp",
  "${services_path}/accountmgr/src/account_event_subscribe.cpp",
  "${services_path}/accountmgr/src/account_file_watcher_manager.cpp",
  "${services_path}/accountmgr/src/account_helper_data.cpp",
  "${services_path}/accountmgr/src/account_info_report.cpp",
  "${services_path}/accountmgr/src/account_mgr_service.cpp",
  "${services_path}/accountmgr/src/account_state_machine.cpp",
  "${services_path}/accountmgr/src/account_stub.cpp",
  "${services_path}/accountmgr/src/distributed_account_subscribe_death_recipient.cpp",
  "${services_path}/accountmgr/src/distributed_account_subscribe_manager.cpp",
  "${services_path}/accountmgr/src/domain_account/domain_account_manager_service.cpp",
  "${services_path}/accountmgr/src/domain_account/domain_account_plugin_death_recipient.cpp",
  "${services_path}/accountmgr/src/domain_account/domain_account_plugin_proxy.cpp",
  "${services_path}/accountmgr/src/domain_account/domain_account_stub.cpp",
  "${services_path}/accountmgr/src/domain_account/domain_has_domain_info_callback.cpp",
  "${services_path}/accountmgr/src/domain_account/inner_domain_account_manager.cpp",
  "${services_path}/accountmgr/src/domain_account/status_listener_death_recipient.cpp",
  "${services_path}/accountmgr/src/domain_account/status_listener_manager.cpp",
  "${services_path}/accountmgr/src/ohos_account_data_deal.cpp",
  "${services_path}/accountmgr/src/ohos_account_manager.cpp",
  "${services_path}/accountmgr/src/osaccount/inner_os_account_manager.cpp",
  "${services_path}/accountmgr/src/osaccount/os_account_control_file_manager.cpp",
  "${services_path}/accountmgr/src/osaccount/os_account_delete_user_idm_callback.cpp",
  "${services_path}/accountmgr/src/osaccount/os_account_domain_account_callback.cpp",
  "${services_path}/accountmgr/src/osaccount/os_account_file_operator.cpp",
  "${services_path}/accountmgr/src/osaccount/os_account_interface.cpp",
  "${services_path}/accountmgr/src/osaccount/os_account_manager_service.cpp",
  "${services_path}/accountmgr/src/osaccount/os_account_photo_operator.cpp",
  "${services_path}/accountmgr/src/osaccount/os_account_plugin_manager.cpp",
  "${services_path}/accountmgr/src/osaccount/os_account_stub.cpp",
  "${services_path}/accountmgr/src/osaccount/os_account_subscribe_death_recipient.cpp",
  "${services_path}/accountmgr/src/osaccount/os_account_subscribe_manager.cpp",
  "${services_path}/accountmgr/src/osaccount/os_account_user_callback.cpp",
]

app_account_sources_mock = [
  "${app_account_innerkits_native_path}/src/app_account_authenticator_callback_proxy.cpp",
  "${app_account_innerkits_native_path}/src/app_account_authenticator_callback_stub.cpp",
  "${app_account_innerkits_native_path}/src/app_account_authorization_extension_callback_proxy.cpp",
  "${app_account_innerkits_native_path}/src/app_account_authorization_extension_callback_service.cpp",
  "${app_account_innerkits_native_path}/src/app_account_authorization_extension_callback_stub.cpp",
  "${app_account_innerkits_native_path}/src/app_account_common.cpp",
  "${app_account_innerkits_native_path}/src/app_account_info.cpp",
  "${app_account_innerkits_native_path}/src/app_account_subscribe_info.cpp",
  "${app_account_services_path}/src/appaccount/app_account_app_state_observer.cpp",
  "${app_account_services_path}/src/appaccount/app_account_authenticator_callback.cpp",
  "${app_account_services_path}/src/appaccount/app_account_authenticator_manager.cpp",
  "${app_account_services_path}/src/appaccount/app_account_authenticator_proxy.cpp",
  "${app_account_services_path}/src/appaccount/app_account_authenticator_session.cpp",
  "${app_account_services_path}/src/appaccount/app_account_authenticator_session_manager.cpp",
  "${app_account_services_path}/src/appaccount/app_account_authorization_extension_proxy.cpp",
  "${app_account_services_path}/src/appaccount/app_account_check_labels_callback.cpp",
  "${app_account_services_path}/src/appaccount/app_account_check_labels_session.cpp",
  "${app_account_services_path}/src/appaccount/app_account_common_event_observer.cpp",
  "${app_account_services_path}/src/appaccount/app_account_common_event_subscriber.cpp",
  "${app_account_services_path}/src/appaccount/app_account_data_storage.cpp",
  "${app_account_services_path}/src/appaccount/app_account_event_proxy.cpp",
  "${app_account_services_path}/src/appaccount/app_account_subscribe_death_recipient.cpp",
  "${app_account_services_path}/src/appaccount/app_account_subscribe_manager.cpp",
]

account_service_sources_mock = [
  "${services_path}/accountmgr/src/account_event_provider.cpp",
  "${services_path}/accountmgr/src/account_event_subscribe.cpp",
  "${services_path}/accountmgr/src/account_file_watcher_manager.cpp",
  "${services_path}/accountmgr/src/account_helper_data.cpp",
  "${services_path}/accountmgr/src/account_info_report.cpp",
  "${services_path}/accountmgr/src/account_mgr_service.cpp",
  "${services_path}/accountmgr/src/account_state_machine.cpp",
  "${services_path}/accountmgr/src/account_stub.cpp",
  "${services_path}/accountmgr/src/distributed_account_subscribe_death_recipient.cpp",
  "${services_path}/accountmgr/src/distributed_account_subscribe_manager.cpp",
  "${services_path}/accountmgr/src/domain_account/domain_account_manager_service.cpp",
  "${services_path}/accountmgr/src/domain_account/domain_account_plugin_death_recipient.cpp",
  "${services_path}/accountmgr/src/domain_account/domain_account_plugin_proxy.cpp",
  "${services_path}/accountmgr/src/domain_account/domain_account_stub.cpp",
  "${services_path}/accountmgr/src/domain_account/domain_has_domain_info_callback.cpp",
  "${services_path}/accountmgr/src/domain_account/inner_domain_account_manager.cpp",
  "${services_path}/accountmgr/src/domain_account/status_listener_death_recipient.cpp",
  "${services_path}/accountmgr/src/domain_account/status_listener_manager.cpp",
  "${services_path}/accountmgr/src/ohos_account_data_deal.cpp",
  "${services_path}/accountmgr/src/ohos_account_manager.cpp",
  "${services_path}/accountmgr/src/osaccount/inner_os_account_manager.cpp",
  "${services_path}/accountmgr/src/osaccount/os_account_control_file_manager.cpp",
  "${services_path}/accountmgr/src/osaccount/os_account_delete_user_idm_callback.cpp",
  "${services_path}/accountmgr/src/osaccount/os_account_domain_account_callback.cpp",
  "${services_path}/accountmgr/src/osaccount/os_account_file_operator.cpp",
  "${services_path}/accountmgr/src/osaccount/os_account_manager_service.cpp",
  "${services_path}/accountmgr/src/osaccount/os_account_photo_operator.cpp",
  "${services_path}/accountmgr/src/osaccount/os_account_plugin_manager.cpp",
  "${services_path}/accountmgr/src/osaccount/os_account_user_callback.cpp",
  "${services_path}/accountmgr/src/osaccount/os_account_stub.cpp",
  "${services_path}/accountmgr/src/osaccount/os_account_subscribe_death_recipient.cpp",
  "${services_path}/accountmgr/src/osaccount/os_account_subscribe_manager.cpp",
]

ability_base_sources = [
  "${ability_runtime_path}/services/abilitymgr/src/ability_connect_callback_stub.cpp",
  "${ability_runtime_path}/services/abilitymgr/src/user_callback_stub.cpp",
  "${app_account_services_path}/src/ability_manager_adapter/ability_manager_adapter.cpp",
]

account_data_storage_source = [
  "${services_path}/accountmgr/src/account_data_storage.cpp",
  "${services_path}/accountmgr/src/osaccount/os_account_data_storage.cpp",
  "${services_path}/accountmgr/src/osaccount/os_account_database_operator.cpp",
]

account_iam_source = [
  "${services_path}/accountmgr/src/account_iam/account_iam_callback.cpp",
  "${services_path}/accountmgr/src/account_iam/account_iam_client_callback_proxy.cpp",
  "${services_path}/accountmgr/src/account_iam/account_iam_mgr_stub.cpp",
  "${services_path}/accountmgr/src/account_iam/account_iam_service.cpp",
  "${services_path}/accountmgr/src/account_iam/inner_account_iam_manager.cpp",
]
