# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/cli/ohos_cli_executable.gni")
import("../../os_account.gni")

ohos_cli_executable("ohos-acm") {
  cli_config_file = "ohos-acm.json"

  sources = [
    "src/main.cpp",
    "src/commands.cpp",
  ]

  include_dirs = [
    "include",
    "${os_account_interfaces_native_path}/include",
    "${innerkits_common}/include",
    "${common_path}/json_utils/include",
  ]

  cflags = [ "-fPIC" ]
  cflags += [ "-Wall" ]
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
  cflags_cc = cflags

  deps = [
    "${os_account_innerkits_native_path}:os_account_innerkits",
    "${common_path}:libaccount_common",
  ]

  external_deps = [
    "hilog:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
    "c_utils:utils",
    "cJSON:cjson",
  ]

  branch_protector_ret = "pac_ret"

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  subsystem_name = "account"
  part_name = "os_account"
}
