# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../os_account.gni")

config("authorization_extension_config") {
  visibility = [ ":*" ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
  defines = [
    "ACCOUNT_LOG_TAG = \"AppAccountFwk\"",
    "LOG_DOMAIN = 0xD001B00",
  ]
}

config("authorization_extension_public_config") {
  visibility = [ ":*" ]
  include_dirs = [ "include" ]
}

ohos_shared_library("authorization_extension") {
  include_dirs = [
    "${os_account_path}/interfaces/innerkits/appaccount/native/include",
    "${os_account_path}/frameworks/appaccount/native/include",
    "${account_napi_common_path}/include",
    "${app_account_kits_path}/include",
  ]
  sources = [
    "${app_account_kits_path}/src/napi_app_account_authorization_extension.cpp",
    "src/authorization_extension.cpp",
  ]
  configs = [
    ":authorization_extension_config",
    "${account_coverage_config_path}:coverage_flags",
  ]
  public_configs = [ ":authorization_extension_public_config" ]

  deps = [
    "${account_napi_common_path}:account_napi_common",
    "${app_account_innerkits_native_path}:app_account_innerkits",
    "${common_path}:libaccount_common",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_context",
    "ability_runtime:runtime",
    "c_utils:utils",
    "hilog:libhilog",
    "i18n:intl_util",
    "ipc:ipc_core",
    "ipc:ipc_napi_common",
    "napi:ace_napi",
  ]

  subsystem_name = "account"
  part_name = "os_account"
}

ohos_shared_library("authorization_extension_module") {
  include_dirs = [ "include" ]

  sources = [ "src/authorization_extension_module_loader.cpp" ]

  configs = [
    ":authorization_extension_config",
    "${account_coverage_config_path}:coverage_flags",
  ]
  public_configs = [ ":authorization_extension_public_config" ]

  deps = [
    ":authorization_extension",
    "${common_path}:libaccount_common",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:runtime",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "napi:ace_napi",
  ]

  relative_install_dir = "extensionability/"
  subsystem_name = "account"
  part_name = "os_account"
}
