# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../os_account.gni")

config("account_posix_adapter_public_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "${common_path}/file_operator/include",
    "${innerkits_common}/include",
    "./include",
    "../file_operator/include",
    "../log/include",
    "#{os_account_dfx_path}/histsevent_adapter"
  ]
}

ohos_shared_library("account_posix_adapter") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [
    "./src/account_posix_adapter.cpp",
    "./src/account_posix_tools.cpp",
    "../file_operator/src/account_file_operator.cpp",
  ]
  public_configs = [ ":account_posix_adapter_public_config" ]
  deps = [ "${common_path}:libaccount_common" ]
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  visibility = [ "${os_account_path}/*" ]
  cflags = [ "-pipe" ]
  cflags_cc = [
    "-Wdate-time",
    "-Wformat=2",
    "-Wshadow",
    "-fvisibility=hidden",
    "-DINCLUDE_FILE_OPT_ONLY",
  ]
  defines = [
    "ACCOUNT_LOG_TAG = \"AccountPosixAdapter\"",
    "LOG_DOMAIN = 0xD001B00",
  ]

  subsystem_name = "account"
  innerapi_tags = [ "platformsdk" ]
  part_name = "os_account"
}